replace typekit with edge font

--- a/css/style.scss
+++ b/css/style.scss
@@ -31,7 +31,7 @@ html, body{
 body{
   margin: 0;
   padding: 0;
-  font-family: Georgia, Times, serif;
+  font-family: cardo, Georgia, Times, serif;
 }
 
 p{
