--- a/css/style.css
+++ b/css/style.css
@@ -327,7 +327,7 @@ html, body {
 body {
   margin: 0;
   padding: 0;
-  font-family: Georgia, Times, serif; }
+  font-family: cardo, Georgia, Times, serif; }
 
 p {
   margin: 0;
