--- a/css/style.css
+++ b/css/style.css
@@ -368,8 +368,8 @@ Wrapping all content to prevent horizontal scrolling.
     Scale the scene size by tweaking the font-size on .wrapper
     The background will scale with the scene. Fonts are in `rem` so they stay constant.
   */
-  height: 75em;
-  width: 120em;
+  height: 1200px;
+  width: 1920px;
   background: url(../images/bg_scn1.jpg) left top;
   background-size: 100%; }
   @media all and (max-width: 1280px) {
